Add Fit2cloud public repository to pom.xml

--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -19,4 +19,12 @@
         <module>extensions</module>
     </modules>
 
+    <repositories>
+        <repository>
+            <id>fit2cloud-public</id>
+            <name>Fit2cloud Public</name>
+            <url>https://repository.fit2cloud.com/repository/fit2cloud-public/</url>
+        </repository>
+    </repositories>
+
 </project>
