--- a/core/core-frontend/package.json
+++ b/core/core-frontend/package.json
@@ -45,6 +45,7 @@
     "lodash-es": "^4.17.21",
     "mathjs": "^11.6.0",
     "mitt": "^3.0.0",
+    "modern-screenshot": "^4.6.6",
     "net": "^1.0.2",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
@@ -66,9 +67,9 @@
     "vue-uuid": "^3.0.0",
     "vue3-ace-editor": "^2.2.2",
     "vuedraggable": "^4.1.0",
+    "vxe-table": "^4.16.20",
     "web-storage-cache": "^1.1.1",
-    "xss": "^1.0.14",
-    "vxe-table": "^4.16.20"
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.8.2",
